--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-einops==0.4.0
+einops
+mamba_ssm
 matplotlib==3.7.0
 numpy==1.23.5
 pandas==1.5.3
@@ -8,5 +9,5 @@ scikit-learn==1.2.2
 scipy==1.10.1
 sktime==0.16.1
 sympy==1.11.1
-torch==1.7.1
+torch
 tqdm==4.64.1
